# rpi-buildroot

board/raspberrypi/: mksdcard
board/raspberrypi/overlay/etc/init.d/: S00modules  S99duplo
board/raspberrypi/overlay/etc/lircd.conf.d/: lego.conf
configs/: raspberrypi_defconfig
package/: Config.in  wiringpi
package/duplo/: Config.in  duplo.mk
package/duplo/src/: Makefile.am  README.md  autogen.sh  configure.ac  duplo.c
package/duplo/src/src/: Makefile.am  log.h  nunchuk.c  nunchuk.h  nunchuk2pi.c  uinput.c  uinput.h
package/i2c-tools/: i2c-tools.mk
package/lirc-tools/: lirc-tools.mk
