AC_INIT([duplo], [1.0])
AC_CONFIG_SRCDIR([duplo.c])
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_RANLIB


HAVE_WIRINGPI_H=no
AC_CHECK_HEADERS([wiringPi.h], [HAVE_WIRINGPI_H=yes])
AC_CHECK_LIB([wiringPi], [wiringPiI2CSetup])

#PKG_CHECK_MODULES(WIRINGPI, wiringPi >= 2.12)
WIRINGPI_CFLAGS=-I/usr/local/wiringPi
WIRINGPI_LIBS=-lwiringPi
AC_SUBST(WIRINGPI_CFLAGS)
AC_SUBST(WIRINGPI_LIBS)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
